# bewise_test_2

./: .env.template  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: lint.yml  tests.yml
models/: base.py
src/: dependencies.py  exceptions.py  main.py
src/alembic/: env.py
src/alembic/versions/: 08fc51525c6a_create_tables.py  4ad0b919ea72_create_tables.py  d3629ed6657a_create_tables.py
src/core/: db.py  settings.py
src/endpoints/: audiotracks.py  routes.py  users.py
src/models/: __init__.py  audiotracks.py  users.py
src/schemas/: audiotracks.py  users.py
src/services/: audiotracks.py  users.py
src/tests/: conftest.py  factories.py
src/tests/test_endpoints/: test_add_user.py
src/tests/test_endpoints/test_audiotracks/: test_add_audiotrack.py  test_get_audiotrack_file.py
src/tests/test_services/test_audiotracks/: test_construct_filepath_and_check_if_it_exists.py  test_filename_with_mp3_extension.py  test_get_audiotrack.py  test_insert_audiotrack_and_get_it_id.py
src/tests/test_services/test_users/: test_get_user_by_access_token.py  test_insert_user.py
