[tool.poetry]
name = "bewise-test-2"
version = "0.1.0"
description = ""
authors = ["Rezuan Dzibov <rezuan.dzbov@gmail.com>"]
readme = "README.md"
packages = [{include = "bewise_test_2"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length=120
exclude = ["src/models/__init__.py"]

[tool.pytest.ini_options]
pythonpath=["src"]
asyncio_mode= "auto"
