[tool.poetry]
name = "bewise-test-2"
version = "0.1.0"
description = ""
authors = ["Rezuan Dzibov <rezuan.dzbov@gmail.com>"]
readme = "README.md"
packages = [{include = "bewise_test_2"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.15"
alembic = "^1.11.1"
python-dotenv = "^1.0.0"
asyncpg = "^0.27.0"
pydub = "^0.25.1"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
httpx = "^0.24.1"
ruff = "^0.0.270"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
faker = "^18.9.0"
pytest-mock = "^3.10.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length=120
exclude = ["src/models/__init__.py"]

[tool.pytest.ini_options]
pythonpath=["src"]
asyncio_mode= "auto"
